Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -313,8 +313,13 @@
         }
 
         .cert-text-box {
-            font-size: 0.7rem;
-            padding: 4px 8px;
+            background: white;
+            color: var(--col-teal-dark);
+            font-weight: 900;
+            font-size: 0.9rem;
+            letter-spacing: 1.5px;
+            padding: 6px 12px;
+            border-radius: 2px;
         }
 
         .opt-radio {
@@ -542,7 +547,7 @@
     <div id="login-layer">
         <div class="login-box">
             <div class="header-logo-row">
-                <img src="https://github.com/jokosaptono17/PLANTASTO/blob/main/LOGO%20PPD%202021.png?raw=true" alt="Logo"
+                <img src="https://github.com/jokosaptono17/SHE_LandingPage/blob/main/ASTO.png?raw=true" alt="Logo"
                     class="custom-logo-header" onerror="this.style.display='none'">
             </div>
             <h2 style="color:var(--col-teal); margin-bottom:30px; font-weight:800; font-size:2rem;">PLANT ASTO EXAM</h2>
@@ -570,13 +575,15 @@
                     <img src="https://github.com/jokosaptono17/SHE_LandingPage/blob/main/ASTO.png?raw=true" alt="Logo"
                         class="custom-logo-header" onerror="this.style.display='none'">
                 </div>
-                <div class="cert-text-box">PLANT ASTO EXAM CERTIFICATION</div>
+                <div style="color: #00878F;" class="cert-text-box">CERTFICATION</div>
                 <div class="header-divider"></div>
                 <div class="timer-wrapper">
                     <span
-                        style="font-size:0.85rem; font-weight:600; letter-spacing:4px; opacity:0.9; margin-bottom:8px;">TIME
+                        style="font-size:0.85rem; font-weight:600; letter-spacing:4px; opacity:0.9; margin-bottom:8px; color: #00878F;"
+                        class="cert-text-box">TIME
                         LEFT
                     </span>
+                    <div>=====================</div>
                     <span id="timer" class="timer-val">00:00:00</span>
                 </div>
             </div>
