--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="shortcut icon" href="plant-asto.png">
     <title>PPD ASTO INNOVATION</title>
     <style>
         /* =========================================
@@ -1069,4 +1070,5 @@
 </body>
 
 </html>
+
 
