Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="shortcut icon" href="NEW PLANT ASTO.png">
+    <link rel="shortcut icon" href="plan-asto.png">
     <title>PPD ASTO INNOVATION</title>
     <style>
         /* =========================================
@@ -1070,6 +1070,7 @@
 </body>
 
 </html>
+
 
 
 
